Some refactoring and a quick bug fix
- There was a bug happening with the NavLinkCard component where sometimes when closing a card, the last card (and it was ALWAYS the last card) would immediately open up and it would reverse the toggle states everywhere else in the application, indicating that the same click both closed one and opened another card.
- I determined this bug was likely caused by the fact that the hidden cards are still clickable even though invisible and due to their positioning in the hidden state they are stacked in such a way that the final card link will always be on the top. It is very small which is why it was not always getting clicked consistently.
- To resolve this issue, I simply added pointer-events: none to the hidden style class. So far, this seems to have been successful, but due to the random nature of the issue I will need to give it more time to know for sure.
- As a bonus, I also refactored the CSS for the MainContent module to make it more DRY

--- a/src/components/MainContent/MainContent.module.scss
+++ b/src/components/MainContent/MainContent.module.scss
@@ -1,35 +1,38 @@
 @import '../../styles/global/variables.scss';
 
-.main {
-	width: 100vw;
-	height: 100vh;
-	overflow: hidden;
+%flex-center {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+}
+
+.main {
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
+	@extend %flex-center;
+
 	.layers {
 		background-color: transparent;
 		background-size: 1rem 1rem;
 		width: 100%;
 		max-width: $max-width;
 		height: 100%;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
+		@extend %flex-center;
 		box-shadow: 0 0 50px 0 $black;
-		.ui-layer {
+
+		.ui-layer,
+		.canvas-layer {
 			background: transparent;
 			width: 100%;
 			height: 100vh;
 			max-width: $max-width;
 			position: relative;
-			// box-shadow: inset 0 -150px 0 0 darken($p1-accent-2, 35%);
 		}
+
 		.canvas-layer {
 			border-radius: 25px;
-			background-color: transparent;
 			background-image: url('/images/sky-bg.png');
 			background-size: auto 110%;
 			background-position: center top;
@@ -43,6 +46,7 @@
 			position: absolute;
 			top: 1rem;
 			transition: background-size cubic-bezier(0.19, 1, 0.22, 1) 2s;
+
 			&.zoomed {
 				background-size: auto 100%;
 			}
